[tool.poetry]
name = "seareports_models"
version = "0.1.0"
description = "Library to reproduce the meshes used for seareport project"
authors = [
    "George Breyiannis <breyiannis@gmail.com>",
    "Panos Mavrogiorgos <pmav99@gmail.com>",
    "Thomas Saillour <saillour.thomas@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.9, <4"
pyposeidon = {git = "https://github.com/tomsail/pyPoseidon.git", rev = "15d94990a9397cd5be8503bc9cf8aab5c3e854c7"}
pyarrow = "*"
fiona = "*"
